KsheerabdhiOrgSetup/manifest/SimbaUniversity/force-app/main/default/objects/Jio_Salary_Details__c/Jio_Salary_Details__c.object-meta.xml
<CustomObject>
    <label>Jio Salary Details</label>
    <nameField>
        <displayFormat>JESD{00}</displayFormat>
        <label>Jio Salary Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Jio Salary Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>