KsheerabdhiOrgSetup/manifest/SimbaUniversity/force-app/main/default/objects/Jio_Salary_Details__c/fields/Basic_Salary__c.field-meta.xml
<CustomField>
    <fullName>Basic_Salary__c</fullName>
    <label>Basic Salary</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>