KsheerabdhiOrgSetup/manifest/SimbaUniversity/force-app/main/default/objects/Jio_Salary_Details__c/fields/Employee_Email_ID__c.field-meta.xml
<CustomField>
    <fullName>Employee_Email_ID__c</fullName>
    <formula>Employee_Name__r.Employee_Email_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee Email ID</label>
    <type>Text</type>
</CustomField>