KsheerabdhiOrgSetup/manifest/SimbaUniversity/force-app/main/default/objects/Jio_Salary_Details__c/fields/Employee_Name__c.field-meta.xml
<CustomField>
    <fullName>Employee_Name__c</fullName>
    <label>Employee Name</label>
    <referenceTo>Jio_Employee_Details__c</referenceTo>
    <relationshipLabel>Jio Salary Details</relationshipLabel>
    <relationshipName>Jio_Salary_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>