KsheerabdhiOrgSetup/manifest/SimbaUniversity/force-app/main/default/objects/Jio_Salary_Details__c/fields/HRA__c.field-meta.xml
<CustomField>
    <fullName>HRA__c</fullName>
    <label>HRA</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>