KsheerabdhiOrgSetup/manifest/SimbaUniversity/force-app/main/default/objects/Jio_Salary_Details__c/listViews/Salary_view.listView-meta.xml
<ListView>
    <fullName>Salary_view</fullName>
    <columns>NAME</columns>
    <columns>Employee_Name__c</columns>
    <columns>Basic_Salary__c</columns>
    <columns>HRA__c</columns>
    <filterScope>Mine</filterScope>
    <label>Salary view</label>
</ListView>